traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:14: error: not found: value ligneOUEST
      ligneOUEST(compteur, abscisse, ordonnee, hauteur, largeur)
      ^TraversalZigZag:24: error: not found: value ligneEST
    ligneEST(compteur, abscisse, ordonnee, hauteur, largeur)
    ^TraversalZigZag:26: error: not found: value ligneOUEST
    ligneOUEST(compteur, abscisse, ordonnee, hauteur, largeur)
    ^TraversalZigZag:34: error: reassignment to val
    abscisse = abscisse + 1
             ^TraversalZigZag:42: error: reassignment to val
    abscisse = abscisse - 1
             ^